--- a/.gitmodules
+++ b/.gitmodules
@@ -193,3 +193,6 @@
 [submodule "bundle/vim-slim"]
 	path = bundle/vim-slim
 	url = git://github.com/bbommarito/vim-slim.git
+[submodule "bundle/vim-perl"]
+	path = bundle/vim-perl
+	url = https://github.com/petdance/vim-perl.git
